Trabajo -Felipphe- Día 22-10-2013

--- a/DesignerRHN/DesignerRHN-war/web/Barra.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Barra.xhtml
@@ -62,15 +62,33 @@
                             <p:commandButton value="[Detalles de liquidación]" style="position: absolute; top: 423px; font-size: 12px; left: 140px; width: 200px; border-color: #B61B26; border-width: 2px"/>
                             <p:commandButton value="[Errores]" style="position: absolute; top: 423px; font-size: 12px; width: 163px; left: 341px; border-color: #B61B26; border-width: 2px"/>
                         </fieldset>
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 31px; left: 12px; height: 23px">  
+                            <p:toolbarGroup align="left">
+                                <p:commandButton id="filtrar" value="" style="background-image: url(Imagenes/embudo.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlBarra.activarCtrlF11()}" process="@this"/>
+                                <p:tooltip style="font-size: 12px" for="filtrar" value="Activar filtrado" />
+
+                                <p:separator style="position: relative; top: -10px" />
+
+                                <p:commandButton id="exportarXLS" value="" style="background-image: url(Imagenes/excel.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " onclick="exportarExcel.show();" />
+                                <p:tooltip style="font-size: 12px" for="exportarXLS" value="Exportar a XLS" />
+
+                                <p:commandButton id="exportarXML" value="" style="background-image: url(Imagenes/XML.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " onclick="exportarXML.show();"/>
+                                <p:tooltip style="font-size: 12px" for="exportarXML" value="Exportar a XML" />
+
+                                <p:commandButton id="exportarPDF" value="" style="background-image: url(Imagenes/pdf.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " onclick="exportarPDF.show();"/>
+                                <p:tooltip style="font-size: 12px" for="exportarPDF" value="Exportar a PDF" />
+                            </p:toolbarGroup>  
+                        </p:toolbar>
+
                         <p:commandButton value="Consultar datos" actionListener="#{controlBarra.consultarDatos()}" style="position: absolute; left: 645px"/>
                         <fieldset style="position: absolute; left: 540px; top: 66px; font-size: 12px; width: 315px; height: 444px; border-radius: 10px; padding-left: 2px; z-index: 1; ">
                             <h:outputText value="Liquidaciones cerradas" style="font-weight: bold; color: blue; font-size: 13px; position: absolute; top: 10px; left: 7px"/>
                             <fieldset style="padding: 0px; position: absolute; top: 35px; border: none">
                                 <p:dataTable id="datosLiquidacionesCerradas" var="liquidacionCerrada" style="font-size: 11px; width: 300px;" value="#{controlBarra.liquidacionesCerradas}"
                                              scrollable="true" scrollWidth="315"
-                                             editable="true" editMode="cell"  scrollHeight="139" filteredValue="#{controlBarra.filtradoLiquidacionesCerradas}" emptyMessage="Sin registros">
+                                             editable="true" editMode="cell"  scrollHeight="#{controlBarra.altoScrollLiquidacionesCerradas}" filteredValue="#{controlBarra.filtradoLiquidacionesCerradas}" emptyMessage="Sin registros">
 
-                                    <p:column id="corte" headerText="Corte" sortBy="#{liquidacionCerrada.corte}" width="55" filterBy="#{liquidacionCerrada.corte}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" > 
+                                    <p:column id="corte" headerText="Corte" sortBy="#{liquidacionCerrada.corte}" width="55" filterBy="#{liquidacionCerrada.corte}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding-left: 3px" > 
                                         <p:cellEditor>  
                                             <f:facet name="output">
                                                 <h:outputText value="#{liquidacionCerrada.corte}">
@@ -85,7 +103,7 @@
                                         </p:cellEditor>
                                     </p:column>
 
-                                    <p:column id="empresa" headerText=".." sortBy="#{liquidacionCerrada.empresaCodigo}" width="5" filterBy="#{liquidacionCerrada.empresaCodigo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                                    <p:column id="empresa" headerText=".." sortBy="#{liquidacionCerrada.empresaCodigo}" width="20" filterBy="#{liquidacionCerrada.empresaCodigo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding-left: 3px"> 
                                         <p:cellEditor>  
                                             <f:facet name="output">
                                                 <h:outputText value="#{liquidacionCerrada.empresaCodigo}" />
@@ -111,7 +129,7 @@
                                         </p:cellEditor>
                                     </p:column>
 
-                                    <p:column id="totalEmpleados" headerText="#" sortBy="#{liquidacionCerrada.total}" width="15" filterBy="#{liquidacionCerrada.total}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                                    <p:column id="totalEmpleados" headerText="#" sortBy="#{liquidacionCerrada.total}" width="20" filterBy="#{liquidacionCerrada.total}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding-left: 3px"> 
                                         <p:cellEditor>  
                                             <f:facet name="output">
                                                 <h:outputText value="#{liquidacionCerrada.total}" />
@@ -143,9 +161,9 @@
                             <fieldset style="padding: 0px; position: absolute; top: 245px; border: none">
                                 <p:dataTable id="datosLiquidacionesAbiertas" var="liquidacionAbierta" style="font-size: 11px; width: 300px;" value="#{controlBarra.liquidacionesAbiertas}"
                                              scrollable="true" scrollWidth="315"
-                                             editable="true" editMode="cell"  scrollHeight="139" filteredValue="#{controlBarra.filtradoLiquidacionesAbiertas}" emptyMessage="Sin registros">
+                                             editable="true" editMode="cell"  scrollHeight="#{controlBarra.altoScrollLiquidacionesAbiertas}" filteredValue="#{controlBarra.filtradoLiquidacionesAbiertas}" emptyMessage="Sin registros">
 
-                                    <p:column id="corteLA" headerText="Corte" sortBy="#{liquidacionAbierta.corte}" width="55" filterBy="#{liquidacionAbierta.corte}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" > 
+                                    <p:column id="corteLA" headerText="Corte" sortBy="#{liquidacionAbierta.corte}" width="55" filterBy="#{liquidacionAbierta.corte}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding-left: 3px"> 
                                         <p:cellEditor>  
                                             <f:facet name="output">
                                                 <h:outputText value="#{liquidacionAbierta.corte}">
@@ -160,7 +178,7 @@
                                         </p:cellEditor>
                                     </p:column>
 
-                                    <p:column id="empresaLA" headerText=".." sortBy="#{liquidacionAbierta.empresaCodigo}" width="5" filterBy="#{liquidacionAbierta.empresaCodigo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                                    <p:column id="empresaLA" headerText=".." sortBy="#{liquidacionAbierta.empresaCodigo}" width="20" filterBy="#{liquidacionAbierta.empresaCodigo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding-left: 3px"> 
                                         <p:cellEditor>  
                                             <f:facet name="output">
                                                 <h:outputText value="#{liquidacionAbierta.empresaCodigo}" />
@@ -186,7 +204,7 @@
                                         </p:cellEditor>
                                     </p:column>
 
-                                    <p:column id="totalEmpleadosLA" headerText="#" sortBy="#{liquidacionAbierta.total}" width="15" filterBy="#{liquidacionAbierta.total}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;"> 
+                                    <p:column id="totalEmpleadosLA" headerText="#" sortBy="#{liquidacionAbierta.total}" width="20" filterBy="#{liquidacionAbierta.total}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding-left: 3px"> 
                                         <p:cellEditor>  
                                             <f:facet name="output">
                                                 <h:outputText value="#{liquidacionAbierta.total}" />
@@ -215,7 +233,7 @@
                                 </p:dataTable>
                             </fieldset>
                         </fieldset>
-                        <p:commandButton style="position: absolute; left: 780px; top: 485px; font-size: 14px; font-family: Arial, Helvetica, sans-serif; z-index: 1" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlCiudades.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 780px; top: 485px; font-size: 14px; font-family: Arial, Helvetica, sans-serif; z-index: 1" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlBarra.salir()}" action="nomina" process="@this" />
                     </p:panel>
                 </h:form>
                 <h:form>
@@ -224,6 +242,83 @@
                         <h:outputText value="El usuario actual, no tiene permisos para liquidar." style="position: absolute; left: 100px; top: 20px; width: 300px;" />
                         <p:commandButton value="Aceptar" onclick="permisoLiquidacion.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
                     </p:dialog>
+
+                    <p:dialog id="exportarExcel" header="Informacion" widgetVar="exportarExcel"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px;">  
+                        <h:outputText value="Seleccione la tabla que desea exportar:" style="position: absolute; left: 20px; top: 10px; width: 300px; font-weight: bold" />
+                        <p:commandButton value="Liquidaciones Cerradas" actionListener="#{controlBarra.exportXLS(0)}" ajax="false" onclick="exportarExcel.hide();" style="position: absolute; top: 40px; left: 30px" process="@this" />
+                        <p:commandButton value="Liquidaciones Prenomina" actionListener="#{controlBarra.exportXLS(1)}" ajax="false"  onclick="exportarExcel.hide();" style="position: absolute; top: 40px; left: 200px" process="@this" />
+                    </p:dialog>
+
+                    <p:dialog id="exportarPDF" header="Informacion" widgetVar="exportarPDF"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px;">  
+                        <h:outputText value="Seleccione la tabla que desea exportar:" style="position: absolute; left: 20px; top: 10px; width: 300px; font-weight: bold" />
+                        <p:commandButton value="Liquidaciones Cerradas" actionListener="#{controlBarra.exportPDF(0)}" ajax="false" onclick="exportarPDF.hide();" style="position: absolute; top: 40px; left: 30px" process="@this" />
+                        <p:commandButton value="Liquidaciones Prenomina" actionListener="#{controlBarra.exportPDF(1)}" ajax="false"  onclick="exportarPDF.hide();" style="position: absolute; top: 40px; left: 200px" process="@this" />
+                    </p:dialog>
+
+                    <p:dialog id="exportarXML" header="Informacion" widgetVar="exportarXML"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px;">  
+                        <h:outputText value="Seleccione la tabla que desea exportar:" style="position: absolute; left: 20px; top: 10px; width: 300px; font-weight: bold" />
+                        <p:commandButton value="Liquidaciones Cerradas" ajax="false" onclick="exportarXML.hide();" style="position: absolute; top: 40px; left: 30px" process="@this">
+                            <p:dataExporter type="xml"  target=":formExportar:datosLiquidacionesCerradasExportar" fileName="LiquidacionesCerradasXML" encoding="UTF-8"/>
+                        </p:commandButton>
+                        <p:commandButton value="Liquidaciones Prenomina" ajax="false"  onclick="exportarXML.hide();" style="position: absolute; top: 40px; left: 200px" process="@this" >
+                            <p:dataExporter type="xml"  target=":formExportar:datosLiquidacionesAbiertasExportar" fileName="LiquidacionesAbiertasXML" encoding="UTF-8"/>
+                        </p:commandButton>
+                    </p:dialog>
+                </h:form>
+                <h:form id="formExportar">
+                    <p:dataTable id="datosLiquidacionesCerradasExportar" var="liquidacionCerradaE" style="display: none; visibility: hidden" value="#{controlBarra.liquidacionesCerradas}">
+
+                        <p:column headerText="Corte">
+                            <f:facet name="header"><h:outputText value="Corte" /></f:facet>
+                            <h:outputText value="#{liquidacionCerradaE.corte}">
+                                <f:convertDateTime pattern="dd/MM/yyyy" />
+                            </h:outputText>
+                        </p:column>
+
+                        <p:column headerText="Codigo_Empresa"> 
+                            <f:facet name="header"><h:outputText value="Codigo Empresa" /></f:facet>
+                            <h:outputText value="#{liquidacionCerradaE.empresaCodigo}" />
+                        </p:column>
+
+                        <p:column headerText="Proceso">
+                            <f:facet name="header"><h:outputText value="Proceso" /></f:facet>
+                            <h:outputText value="#{liquidacionCerradaE.descripcion}" />
+                        </p:column>
+
+                        <p:column>                                    
+                            <f:facet name="header"><h:outputText value="Observacion" /></f:facet>
+                            <h:outputText value="#{liquidacionCerradaE.observaciones}" style="text-align: right">
+                                <f:convertNumber currencyCode="COP"/>
+                            </h:outputText>
+                        </p:column>
+                    </p:dataTable>
+
+                    <p:dataTable id="datosLiquidacionesAbiertasExportar" var="liquidacionAbiertaE" style="display: none; visibility: hidden" value="#{controlBarra.liquidacionesAbiertas}">
+
+                        <p:column headerText="Corte">
+                            <f:facet name="header"><h:outputText value="Corte" /></f:facet>
+                            <h:outputText value="#{liquidacionAbiertaE.corte}">
+                                <f:convertDateTime pattern="dd/MM/yyyy" />
+                            </h:outputText>
+                        </p:column>
+
+                        <p:column headerText="Codigo_Empresa"> 
+                            <f:facet name="header"><h:outputText value="Codigo Empresa" /></f:facet>
+                            <h:outputText value="#{liquidacionAbiertaE.empresaCodigo}" />
+                        </p:column>
+
+                        <p:column headerText="Proceso">
+                            <f:facet name="header"><h:outputText value="Proceso" /></f:facet>
+                            <h:outputText value="#{liquidacionAbiertaE.descripcion}" />
+                        </p:column>
+
+                        <p:column>                                    
+                            <f:facet name="header"><h:outputText value="Observacion" /></f:facet>
+                            <h:outputText value="#{liquidacionAbiertaE.observaciones}" style="text-align: right">
+                                <f:convertNumber currencyCode="COP"/>
+                            </h:outputText>
+                        </p:column>
+                    </p:dataTable>
                 </h:form>
             </ui:define>
         </ui:composition>
