--- a/DesignerRHN/DesignerRHN-war/web/Tercero.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Tercero.xhtml
@@ -532,13 +532,13 @@
 
                             <p:separator /> 
                             <p:commandButton id="insertar" value="" style="background-image: url(Imagenes/nuevoRegistro.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlTercero.validarIngresoNuevoRegistro()}"  process="@this"/> 
-                            <p:tooltip style="font-size: 12px" for="insertar" value="Nueva Vigencia Sueldo" />
+                            <p:tooltip style="font-size: 12px" for="insertar" value="Nuevo Tercero" />
 
                             <p:commandButton id="eliminar" value="" style="background-image: url(Imagenes/delete.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlTercero.validarBorradoRegistro()}" process="@this"/>  
-                            <p:tooltip style="font-size: 12px" for="eliminar" value="Eliminar Vigencia Sueldo" />
+                            <p:tooltip style="font-size: 12px" for="eliminar" value="Eliminar Tercero" />
 
                             <p:commandButton id="duplicar" value="" style="background-image: url(Imagenes/duplicar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px "  actionListener="#{controlTercero.validarDuplicadoRegistro()}" process="@this"/>  
-                            <p:tooltip style="font-size: 12px" for="duplicar" value="Duplicar Vigencia Sueldo" />
+                            <p:tooltip style="font-size: 12px" for="duplicar" value="Duplicar Tercero" />
 
                             <p:separator /> 
                             <p:commandButton id="rastro" value="" style="background-image: url(Imagenes/rastro.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlTercero.verificarRastroTabla()}" process="@this"/>  
